# multi-agent-corporate-governance-document-analytics-engine

./: .gitignore  README.md
backend/: config.py  main.py  pyproject.toml
backend/api/routers/file_upload/: handle_file_upload.py
backend/rag/: compiled_governance_report.md  main.py
backend/rag/detect_file_type/: main.py
backend/rag/embedding/: main.py
backend/rag/embedding_model/: __init__.py  main.py
backend/rag/file_parsers/: main.py
backend/rag/file_parsers/csv/: main.py
backend/rag/file_parsers/pdf/: main.py
backend/rag/file_parsers/pdf_docx_xlsx/: parser.py
backend/rag/hybrid_search/: main.py
backend/rag/rerank_model/: main.py
backend/rag/scan_file/: virus_scan.py
backend/rag/text_chunking/: main.py
backend/rag/vector_store/: main.py
docs/: Multi-Agent Corporate Governance & Document Analytics Engine.docx  Multi-Agent Corporate Governance & Document Analytics Engine.md  Multi-Agent Corporate Governance - Tasks 68c82021b2734d05b68b4eccb3f8e6f9_all.csv  chunking_simple.md  chunking_with_chunk_tokens.md
