[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudmersive-virus-api-client>=3.2.0",
    "fastapi>=0.136.3",
    "firecrawl>=4.28.2",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langchain-pymupdf4llm>=0.5.0",
    "langgraph>=1.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "pytest>=8.0.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.48.0",
]
