[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudmersive-virus-api-client>=3.2.0",
    "fastapi>=0.136.3",
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "streamlit>=1.58.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.48.0",
]
